KUBE/app3-eks-project/kube/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: eks-3
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: docker.io/achalpadol/react-java-frontend:v1
          ports:
            - containerPort: 80
