KUBE/app3-eks-project/kube/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: eks-3
spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
