KUBE/app3-eks-project/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: eks-3
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/transforms.app3-backend-service: >
      [{"type":"url-rewrite","urlRewriteConfig":{"rewrites":[{"regex":"^/api$","replace":"/"}]}}]

spec:
  ingressClassName: alb
  rules:
    - host: app3.achal.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
